# Project-Proposal

./: CMakeLists.txt  README.md  readme.md  test.cpp
Canteen-Management-System/: CMakeLists.txt
Canteen-Management-System-TuanCuong/: CMakeLists.txt
Canteen-Management-System-TuanCuong/backend/models/: Admin.cpp  Admin.h  Bill.cpp  Bill.h  BillManagement.cpp  BillManagement.h  Cart.cpp  Cart.h  Customer.cpp  Customer.h  DateTime.h  Datetime.cpp  Drink.cpp  Drink.h  Food.cpp  Food.h  IVisitor.h  KhoHang.h  LinkedList.tpp  Main  Main.cpp  Main.h  Main_all.cpp  Main_all.h  Money.cpp  Product.cpp  Product.h  User.cpp  User.h  UserManagement.cpp
Canteen-Management-System-TuanCuong/backend/repository/: ProductRepository.h
Canteen-Management-System-TuanCuong/backend/routes/: Route.cpp  Route.h  main.cpp
Canteen-Management-System/backend/models/: Admin.cpp  Admin.h  Bill.cpp  Bill.h  BillManagement.cpp  BillManagement.h  Customer.cpp  Customer.h  Datetime.cpp  Drink.cpp  Drink.h  Food.cpp  Food.h  KhoHang.cpp  KhoHang.h  (+9 more)
Canteen-Management-System/frontend/: UI.html  UI_admin.html  add_product.html  begin.html  inf.html  login.html  show_bill.html  show_cart.html  show_product.html  signup.html
Html/: Main.cpp  index.html
Main/: Admin.cpp  Admin.h  Bill.cpp  Bill.h  BillManagement.cpp  BillManagement.h  Cart.cpp  Cart.h  Customer.cpp  Customer.h  KhoHang.cpp  KhoHang.h  LinkedList.cpp  LinkedList.h  LinkedList.tpp  Main  Main.cpp  Main.h  Money.h  Node.cpp  Node.h  SanPham.cpp  SanPham.h  ThucAn.cpp  ThucAn.h  ThucUong.cpp  ThucUong.h  User.cpp  User.h  UserManagement.cpp  UserManagement.h  Utils.cpp  Utils.h  main.cpp  show_Data.h
SQL_Temp/: Main.cpp  Product.h  ProductQueryBuilder.h  ProductRepository.h  ProductRepositoryImpl_MySQL.h
Test/: Main  Makefile  Test.cpp
backend/: main.cpp
backend/models/: Admin.cpp  Admin.h  Bill.cpp  Bill.h  BillManagement.cpp  BillManagement.h  Cart.cpp  Cart.h  Customer.cpp  Customer.h  DateTime.h  Datetime.cpp  Drink.cpp  Drink.h  Food.cpp  Food.h  IVisitor.h  KhoHang.cpp  KhoHang.h  LinkedList.h  LinkedList.tpp  Main  Main.cpp  Main.h  Main_all.cpp  Main_all.h  Money.cpp  Money.h  Product.cpp  Product.h  SanPham.cpp  SanPham.h  ThucAn.h  ThucUong.h  User.cpp  User.h  UserManagement.cpp  UserManagement.h  Utils.cpp  main.cpp
backend/repository/: BillQueryBuilder.cpp  BillQueryBuilder.h  BillRepository.cpp  BillRepository.h  Main_all.h  ProductQueryBuilder.h  ProductQueryBuilder.h.cpp  ProductRepository.cpp  ProductRepository.h  Repository.h  Sql Canteen.sql  UserQueryBuilder.cpp  UserQueryBuilder.h  UserRepository.cpp  UserRepository.h
backend/respository/: ProductRepository.h
backend/routes/: Route.cpp  Route.h  main.cpp
frontend/: UI.html  UI_admin.html  add_product.html  begin.html  inf.html  login.html  product_detail.html  show_bill.html  show_cart.html  show_product.html  show_user.html  signup.html  temp.html  test.html  test1.html  user.html  user_detail.html  work.html
(+18 files in other folders)
